# tuack-ng

./: .all-contributorsrc  .autocorrectignore  .autocorrectrc  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  justfile
.github/workflows/: rust.yml
MOVE/: conf.json  precaution.md
assets/: langs.json
assets/checkers/: normal.cpp
assets/scaffold/contest/: conf.json
assets/scaffold/day/: conf.json
assets/scaffold/problem/: conf.json
doc/changelog/: 0.1.0.md  0.1.2.md  0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md  0.3.2.md  0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  1.0.0-rc.1.md  1.0.0-rc.2.md
doc/debian/: postinst  prerm
scaffold/day/: conf.json
scaffold/problem/: statement.md
src/: conf.rs  config.rs  context.rs  debug.rs  develop.rs  dmk.rs  doc.rs  dump.rs  fun.rs  generate.rs  init.rs  main.rs  move_.rs  prelude.rs  ren.rs  test.rs  tuack_lib.rs  utils.rs
src/config/: contest.rs  contestday.rs  data.rs  lang.rs  migrate.rs  mod.rs  models.rs  msgs.rs  problem.rs
src/config/migrate/: base.rs  v3.rs  v4.rs  v5.rs  v6.rs
src/doc/: check.rs  format.rs  rules.rs
src/doc/rules/: autocorrect.rs  html.rs  invisible.rs  latex.rs  samples_not_found.rs  samples_should_be_external.rs  samples_too_large.rs
src/dump/: arbiter.rs  lemon.rs
src/ren/: cli.rs  data_json.rs  lua.rs  macro.rs  manifest.rs  mod.rs  processors.rs  renderer.rs  renderers.rs  template.rs  tools.rs  unwrap.rs  utils.rs
src/ren/processors/: html_table.rs  loj.rs
src/ren/renderers/: base.rs  markdown.rs  typst.rs
src/ren/renderers/typst/: datajson.rs
src/test/: checker.rs
src/tuack_lib/: config.rs  dmk.rs  utils.rs
src/tuack_lib/config/: contest.rs  contestday.rs  lang.rs  migrate.rs  problem.rs
src/tuack_lib/config/migrate/: v3.rs
src/tuack_lib/doc/: rules.rs
src/tuack_lib/utils/: compiler.rs  testlib.rs
src/utils/: checkers.rs  command.rs  compile.rs  compiler.rs  compilers.rs  duration.rs  filesystem.rs  message.rs  optional.rs  process.rs  random.rs  utils.rs
src/utils/checkers/: cpp.rs  helper.rs  prebuilt.rs
src/utils/compilers/: cpp.rs  general.rs  generator.rs
