[package]
name = "tuack-ng"
version = "0.0.2"
edition = "2024"
authors = ["Pulsar <Pulsar33550336@163.com>"]
description = "重构后的 tuack 项目，旨在提供更加高效和轻量的出题体验。"
repository = "https://github.com/tuack-ng/tuack-ng"
license = "AGPL-3.0-or-later"

[dependencies]
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
clap-i18n-richformatter = { version = "0.3.0", features = ["derive"] }
colored = "3.0.0"
log = "0.4.29"
log4rs = "1.4.0"
markdown-ppp = { path = "./markdown-ppp", features = ["parser", "ast-serde", "ast-transform", "typst-printer"] }
nom = "8.0.0"
pretty = "0.12.5"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
assets = [
    "$auto",
    ["templates/*/**/*", "usr/share/tuack-ng/templates/", "755"],
    ["scaffold/*/**/*", "usr/share/tuack-ng/scaffold/", "755"],
]

[package.metadata.aur]
files = [
    ["templates/", "/usr/share/tuack-ng/templates/", "755"],
    ["scaffold/", "/usr/share/tuack-ng/scaffold/", "755"],
]
depends = ["gcc-libs", "glibc"]