[package]
name = "tuack-ng"
version = "0.2.0"
edition = "2024"
authors = ["Pulsar <Pulsar33550336@163.com>"]
description = "重构后的 tuack 项目，旨在提供更加高效和轻量的出题体验。"
repository = "https://github.com/tuack-ng/tuack-ng"
license = "AGPL-3.0-or-later"

[dependencies]
bytes = "1.11.0"
bytesize = "2.3.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
clap-i18n-richformatter = { version = "0.3.0", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.0"
dialoguer = "0.12.0"
evalexpr = "13.1.0"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
log4rs = "1.4.0"
markdown-ppp = { git = "https://github.com/tuack-ng/markdown-ppp.git", rev = "795f631",features = ["parser", "ast-serde", "ast-transform", "typst-printer"] }
minijinja = "2.14.0"
natord = "1.0.9"
nom = "8.0.0"
pretty = "0.12.5"
regex = "1.12.2"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
shared_child = "1.1.1"
shellwords = "1.1.0"
sysinfo = "0.37.2"

[build-dependencies]
ureq = "3.1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.debug-release]
inherits = "release"
lto = false
codegen-units = 16
strip = false

[package.metadata.deb]
assets = [
    "$auto",
    ["assets/**/*", "usr/share/tuack-ng/", "755"],
    # ["assets/scaffold/*/**/*", "usr/share/tuack-ng/scaffold/", "755"],
]

[package.metadata.aur]
files = [
    ["assets/", "/usr/share/tuack-ng/", "755"],
    # ["assets/scaffold/", "/usr/share/tuack-ng/scaffold/", "755"],
]
depends = ["gcc-libs", "glibc"]
