[package]
name = "tuack-ng"
version = "0.3.1"
edition = "2024"
authors = ["Pulsar <Pulsar33550336@163.com>"]
description = "重构后的 tuack 项目，旨在提供更加高效和轻量的出题体验。"
repository = "https://github.com/tuack-ng/tuack-ng"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = {version = "1.0.100", features = ["backtrace"]}
bytesize = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
clap-i18n-richformatter = { version = "0.3.0", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.0.0"
csv = "1.3.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
dunce = "1.0.5"
evalexpr = "13.1.0"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
log4rs = "1.4.0"
markdown-ppp = { git = "https://github.com/tuack-ng/markdown-ppp.git", rev = "795f631",features = ["parser", "ast-serde", "ast-transform", "typst-printer"] }
minijinja = "2.14.0"
natord = "1.0.9"
nom = "8.0.0"
pretty = "0.12.5"
quick-xml = { version = "0.39.0", features = ["serialize"] }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
shellwords = "1.1.0"
strfmt = "0.2.5"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["fs", "macros", "process", "rt", "sync", "time", "tokio-macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.debug-release]
inherits = "release"
lto = false
codegen-units = 16
strip = false
debug = 2

[package.metadata.deb]
assets = [
    "$auto",
    ["assets/**/*", "usr/share/tuack-ng/", "755"],
    # ["assets/scaffold/*/**/*", "usr/share/tuack-ng/scaffold/", "755"],
]
maintainer-scripts = "doc/debian/"

[package.metadata.aur]
files = [
    ["assets/", "/usr/share/tuack-ng/", "755"],
    # ["assets/scaffold/", "/usr/share/tuack-ng/scaffold/", "755"],
]
depends = ["gcc-libs", "glibc"]
